Added multiple gradient options

--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -7,6 +7,9 @@
     max-height:100vh;
     background-image: linear-gradient(to top right,#450b7c,#563cc9,#49e9fb);
     background-image: linear-gradient(to top right, #d51616, #e65533, #5b2dd9);
+    background-image: linear-gradient(to right top, #24044c, #290459, #2e0467, #330575, #380583, #3a0a8b, #3c0f94, #3d149c, #3c1ca0, #3b23a4, #3b29a8, #3a2fac);
+    background-image: linear-gradient(to right top, #2a2a72, #2e4595, #2d62b8, #2480db, #009ffd);
+    background-image: linear-gradient(to right bottom, #0086d4, #027dc7, #0375bb, #046cae, #0464a2, #055a97, #06508c, #064681, #0a3873, #0e2b65, #101d57, #101048);
 
     &__background{
         width:100%;
