--- a/src/sass/libs/_variables.scss
+++ b/src/sass/libs/_variables.scss
@@ -22,9 +22,9 @@ $font-primary:                      'Montserrat-Light', sans-serif;
 $font-secondary:                    'Hikou-Regular', sans-serif; 
 $font-tertiary:                     'Hikou-Light', sans-serif; 
 $font-quaternary:                   'Hikou-Outline', sans-serif; 
-$font-color-primary:              #636363;
-$font-color-secondary:            #ffffff;
-$font-color-tertiary:             #C2C2C2;
+$font-color-primary:              #393939;
+$font-color-secondary:            #636363;
+$font-color-tertiary:             #ffffff;
 
 $font-lineheight:                   1.56rem;
 $font-lineheight-small:             1rem;
