--- a/src/sass/libs/_helpers.scss
+++ b/src/sass/libs/_helpers.scss
@@ -41,4 +41,10 @@
     transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
+@mixin h-middle-top{
+    top:0;
+    left:60%;
+    background-image:url("../img/Illustration_top_middle.svg");
+}
+
 
