--- a/src/sass/components/_content.scss
+++ b/src/sass/components/_content.scss
@@ -10,7 +10,6 @@
     height:100vh;
     top:0;
     left:0;
-    //background-image:url("../img/background.svg");
     background-image:url("../img/background.png");
     background-image:url("../img/background_v2.svg");
     background-repeat: no-repeat;
@@ -19,60 +18,50 @@
 
 .content{
     display:grid;
-    // @include flex-align-center;  
-    grid-template-columns: repeat(5, 1fr);  
-    grid-template-rows: 1fr 3fr 2fr;
-    width:100vw;
-    max-width:100vw;
-    height:100vh;
-    max-height:100vh; 
-    // background-image: linear-gradient(to top right,#450b7c,#563cc9,#49e9fb);
-    // background-image: linear-gradient(to top right, #d51616, #e65533, #5b2dd9);
-    // background-image: linear-gradient(to right top, #24044c, #290459, #2e0467, #330575, #380583, #3a0a8b, #3c0f94, #3d149c, #3c1ca0, #3b23a4, #3b29a8, #3a2fac);
-    // background-image: linear-gradient(to right top, #2a2a72, #2e4595, #2d62b8, #2480db, #009ffd);
-    // background-image: linear-gradient(to right bottom, #0086d4, #027dc7, #0375bb, #046cae, #0464a2, #055a97, #06508c, #064681, #0a3873, #0e2b65, #101d57, #101048);
+    grid-template-columns: repeat(6, 1fr);  
+    width:70vw;
+    max-width:70vw;
+    height:80vh;
+    max-height:80vh;
+    margin-left:15vw;
+    margin-top:10vh;
 
-    &__background{
-        position:absolute;
-       // grid-column: 1 / 6;
-        background-repeat: no-repeat;
-        background-size: contain;
 
-        &__middle_top{
-            width:70vw;
-            height:65vh;
-            top:0;
-            right:10vw;
-            background-image:url("../img/Illustration_top_middle.svg");
-            background-position: right;    
+    &__intro{
+        grid-column: 1 / 3;
+        text-align: left;
+
+        &__title{
+            //@include text-crop;
+            span{
+              color:  $font-color-secondary;
+            }
         }
 
-        &__bottom_left{
-            width:40vw;
-            height:80vh;
-            bottom:0;
-            left:0;
-            background-image:url("../img/Illustration_bottom_left.svg");
-            background-position: right;
-            background-size: cover;
-        }
-
-        &__bottom_right{
-            width:40vw;
-            height:50vh;
-            bottom:0;
-            right:0;
-            background-image:url("../img/Illustration_bottom_right.svg");
-            background-position: right;
+        &__text{
+            width:50%;
+            margin-top: -5vh;
+           // @include text-crop;
+            span{
+              color:  $font-color-tertiary;
+            }
         }
     }
 
-    &__textwrapper{
-        grid-column: 2 / 5;
-        grid-row:2;
-        background: white;
-        height:100%;
+    &__cta{
+        display:flex;
+        justify-content: center;
+        align-self:flex-end;
+        justify-self: center;
+        grid-column: 4 / 6;
+        padding: 0 3rem;
         text-align: center;
+        background-color: $font-color-secondary;
+        border-radius: 50px;
+        @include text-crop;
+        span{
+            color:  $font-color-tertiary;
+          }
     }
 
     &__characters{
