--- a/src/sass/libs/_reset.scss
+++ b/src/sass/libs/_reset.scss
@@ -32,3 +32,13 @@ body {
 * {
     box-sizing: border-box;
 }
+
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
