--- a/src/sass/libs/_typography.scss
+++ b/src/sass/libs/_typography.scss
@@ -1,7 +1,7 @@
 $font-size-ratio-mobile:        0.88;
 $font-size-ratio:               1.15;
-$font-body-line-height:         1.5;
-$font-heading-line-height:      1.20;
+$font-line-height:              1.5;
+$font-line-height-small:         0.5;
 
 $font-size--3:                 calc(1em / #{$font-size-ratio} / #{$font-size-ratio} / #{$font-size-ratio});
 $font-size--2:                 calc(1em / #{$font-size-ratio} / #{$font-size-ratio});
@@ -45,7 +45,7 @@ $font-size-10:                 calc(1em * #{$font-size-ratio} * #{$font-size-rat
     font-family: $font-primary;
     font-size: $font-size-2;
     //font-size: calc(#{$font-size*0.875} + 0.28vw); /* Manually set base font-size at container width viewport */
-    line-height: $font-body-line-height;
+    line-height: $font-line-height;
     text-transform: unset;
     color: $font-color-primary;
 }
@@ -56,11 +56,11 @@ body,
 }
 
 @mixin h1 {
-    font-family: $font-secondary;
-    line-height: $font-heading-line-height;
+    font-family: $font-primary;
     font-size: $font-size-7;   
     text-transform: unset;
-    font-weight:$font-weight-normal;
+    font-weight:$font-weight-bold;
+    line-height: $font-line-height;
 }
 
 h1,
@@ -70,11 +70,11 @@ h1,
 
 @mixin h2 {
     font-family: $font-primary;
-    line-height: $font-heading-line-height;
     font-size: $font-size-0;
     text-transform: unset;
     font-weight:$font-weight-light;
     color: $font-color-primary;
+    line-height: $font-line-height;
 }
 
 h2,
@@ -83,57 +83,17 @@ h2,
 }
 
 @mixin h3 {
-    font-family: $font-tertiary;
-    line-height: $font-heading-line-height;
+    font-family: $font-secondary;
     font-size: $font-size-3;
-    font-weight:$font-weight-light;
-    color:$font-color-primary;
+    font-weight:$font-weight-medium;
+    color:$font-color-quaternary;
+    line-height: $font-line-height-small;
 }
 
 h3,
 .h3 {
     @include h3;
 }
-
-@mixin h4 {
-    font-family: $font-secondary;
-    line-height: $font-heading-line-height;
-    font-size: $font-size-2;
-    font-weight:$font-weight-normal;
-    color:$font-color-secondary;
-}
-
-h4,
-.h4 {
-    @include h4;
-}
-
-@mixin h5 {
-    font-family: $font-primary;
-    line-height: $font-heading-line-height;
-    font-size: $font-size-0;
-    font-weight:$font-weight-normal;
-    color:$font-color-secondary;
-}
-
-h5,
-.h5 {
-    @include h5;
-}
-
-@mixin h6 {
-    font-family: $font-secondary;
-    line-height: $font-heading-line-height;
-    font-size: $font-size-1;
-    font-weight:$font-weight-normal;
-    color:$font-color-primary;
-}
-
-h6,
-.h6 {
-    @include h6;
-}
-
 
 
 
