--- a/src/sass/libs/_variables.scss
+++ b/src/sass/libs/_variables.scss
@@ -33,6 +33,7 @@ $spacing-xl:                        64px;
 $spacing-xxl:                       128px;
 
 // Media Queries
+$breakpoint-xxs:                    320px;
 $breakpoint-xs:                     480px;
 $breakpoint-sm:                     768px;
 $breakpoint-md:                     960px;
